# dsapiforwardedfor

./: .gitignore  .project  CMakeLists.txt  Cargo.toml  README.md  build-linux.sh  build.rs  gen-macos.sh  gen-xcode.sh  notes.h  run.sh
docker/: build-linux-inner.sh  build-linux.dockerfile  build.dockerfile  run.dockerfile
docker/notesdata/: .gitignore  servertest.nsf
src/: dsapiforwardedfor.c  lib.rs  notesapi.rs
